fix: z-index хедера

--- a/src/scss/layout/common/_header.scss
+++ b/src/scss/layout/common/_header.scss
@@ -4,6 +4,7 @@
 
 #header {
   position: fixed;
+  z-index: $z-index-header;
   top: 0;
   left: 0;
   width: 100%;
